@@ -1,17 +1,22 @@
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class StreamQuizz {
+    public static void main(String[] args) {
+        List<String> names = List.of("yamada", "tanaka", "yasuda", "suzuki", "iida");
 
-  public static void main(String[] args) {
-    List<String> names = List.of("yamada", "tanaka", "yasuda", "suzuki", "iida");
+        /*Listを昇順に並べたものを出力*/
+        List<String> sortedResult = names.stream().sorted().toList();
+        System.out.println(sortedResult);
 
-    List<String> sortedResult = names.stream().sorted().toList();
+        /*"y"から始まる要素を数えて出力*/
+        long count = names.stream().filter(name -> name.startsWith("y")).count();
+        System.out.println(count);
 
-    long count = names.stream().filter(name -> name.startsWith("y")).count();
+        /*Listに"yamada"があるかtureかfalse*/
+        boolean hasYamada = names.stream().anyMatch(name -> name.equals("yamada"));
+        System.out.println(hasYamada);
 
-    boolean hasYamada = names.stream().anyMatch(name -> name.equals("yamada"));
-
-    names.stream().map(name -> name.toUpperCase()).collect(Collectors.toList());
-  }
+        /*Listの名前を大文字に変換、ラムダ式をメソッド参照へ変更、出力*/
+        names.stream().map(String::toUpperCase).toList().forEach(System.out::println);
+    }
 }
